[package]
name = "blockchain-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust service that indexes blockchain blocks into Elasticsearch"
license = "AGPL-3.0"
repository = "https://github.com/felixfrancia27/rustchain-indexer"
keywords = ["blockchain", "indexer", "elasticsearch", "ethereum"]
categories = ["blockchain", "database"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = { version = "2.0", features = ["rustls"] }
elasticsearch = "8.19.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
hex = "0.4"
chrono = "0.4"
url = "2.5"
futures = "0.3"
home = "0.5.11"
base64ct = "1.7.1"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"

